# jenkinstest

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: client_main.cpp
cmake/modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
common/: CMakeLists.txt
common/include/: lib.hpp
common/src/: lib.cpp
gui/: CMakeLists.txt
gui/include/: gui.hpp
gui/src/: gui.cpp
server/: CMakeLists.txt
server/src/: server_main.cpp
